Fix loader z-index for admin

--- a/core/src/plugins/gui.ajax/res/themes/material/css/components/loader.less
+++ b/core/src/plugins/gui.ajax/res/themes/material/css/components/loader.less
@@ -2,7 +2,7 @@
   left: 0 !important;
   top: 0 !important;
   width: 100%;
-  z-index: 1022 !important;
+  z-index: 1102 !important;
   height: 2px;
   width: 100%;
   position: absolute;
